--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url(/assets/img/bg.jpg);
+    background-image: url('img/bg.jpg');
     background-position: top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
